Fixed SonarQube issues